// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`require-external-programs-lib allManifests lists all manifests 1`] = `
Array [
  "invalid/missing-dependency-in-peer/foo/package.json",
  "invalid/missing-field-of-peer/bar/package.json",
  "invalid/not-an-array/baz/package.json",
  "valid/node_modules/abc-def/package.json",
  "valid/node_modules/abc-ghi/package.json",
  "valid/node_modules/jkl/package.json",
  "valid/node_modules/skipped/package.json",
]
`;

exports[`require-external-programs-lib classifyManifestList matches snapshot 1`] = `
Object {
  "excluded": Array [
    Object {
      "manifestContent": Object {
        "name": "skipped",
        "peerDependencies": Object {
          "require-external-programs": "*",
        },
      },
      "manifestPath": "valid/node_modules/skipped/package.json",
    },
  ],
  "included": Array [
    Object {
      "manifestContent": Object {
        "name": "abc-def",
        "peerDependencies": Object {
          "require-external-programs": "*",
        },
        "requireExternalPrograms": Array [
          "abc",
          "def",
        ],
      },
      "manifestPath": "valid/node_modules/abc-def/package.json",
    },
    Object {
      "manifestContent": Object {
        "name": "abc-ghi",
        "peerDependencies": Object {
          "require-external-programs": "*",
        },
        "requireExternalPrograms": Array [
          "abc",
          "ghi",
        ],
      },
      "manifestPath": "valid/node_modules/abc-ghi/package.json",
    },
    Object {
      "manifestContent": Object {
        "name": "jkl",
        "peerDependencies": Object {
          "require-external-programs": "*",
        },
        "requireExternalPrograms": Array [
          "jkl",
        ],
      },
      "manifestPath": "valid/node_modules/jkl/package.json",
    },
  ],
  "invalid": Array [
    Object {
      "manifestContent": Object {
        "name": "foo",
        "peerDependencies": Object {},
        "requireExternalPrograms": Array [
          "hello",
        ],
      },
      "manifestPath": "invalid/missing-dependency-in-peer/foo/package.json",
      "reason": "Missing \\"require-external-programs\\" in \\"peerDependencies\\"",
    },
    Object {
      "manifestContent": Object {
        "name": "bar",
        "requireExternalPrograms": Array [
          "hello",
        ],
      },
      "manifestPath": "invalid/missing-field-of-peer/bar/package.json",
      "reason": "Missing \\"require-external-programs\\" in \\"peerDependencies\\"",
    },
    Object {
      "manifestContent": Object {
        "name": "bar",
        "peerDependencies": Object {
          "require-external-programs": "*",
        },
        "requireExternalPrograms": "hello",
      },
      "manifestPath": "invalid/not-an-array/baz/package.json",
      "reason": "Expecting \\"require-external-programs\\" to be an array but received \\"hello\\"",
    },
  ],
}
`;

exports[`require-external-programs-lib fromAllManifests throws error when received invalid data which is located in / 1`] = `
Object {
  "error": [InvalidManifest: Detected 3 invalid items],
  "map": Map {
    "invalid/missing-dependency-in-peer/foo/package.json" => Object {
      "manifestContent": Object {
        "name": "foo",
        "peerDependencies": Object {},
        "requireExternalPrograms": Array [
          "hello",
        ],
      },
      "manifestPath": "invalid/missing-dependency-in-peer/foo/package.json",
      "reason": "Missing \\"require-external-programs\\" in \\"peerDependencies\\"",
    },
    "invalid/missing-field-of-peer/bar/package.json" => Object {
      "manifestContent": Object {
        "name": "bar",
        "requireExternalPrograms": Array [
          "hello",
        ],
      },
      "manifestPath": "invalid/missing-field-of-peer/bar/package.json",
      "reason": "Missing \\"require-external-programs\\" in \\"peerDependencies\\"",
    },
    "invalid/not-an-array/baz/package.json" => Object {
      "manifestContent": Object {
        "name": "bar",
        "peerDependencies": Object {
          "require-external-programs": "*",
        },
        "requireExternalPrograms": "hello",
      },
      "manifestPath": "invalid/not-an-array/baz/package.json",
      "reason": "Expecting \\"require-external-programs\\" to be an array but received \\"hello\\"",
    },
  },
}
`;

exports[`require-external-programs-lib fromAllManifests throws error when received invalid data which is located in /invalid 1`] = `
Object {
  "error": [InvalidManifest: Detected 3 invalid items],
  "map": Map {
    "invalid/missing-dependency-in-peer/foo/package.json" => Object {
      "manifestContent": Object {
        "name": "foo",
        "peerDependencies": Object {},
        "requireExternalPrograms": Array [
          "hello",
        ],
      },
      "manifestPath": "invalid/missing-dependency-in-peer/foo/package.json",
      "reason": "Missing \\"require-external-programs\\" in \\"peerDependencies\\"",
    },
    "invalid/missing-field-of-peer/bar/package.json" => Object {
      "manifestContent": Object {
        "name": "bar",
        "requireExternalPrograms": Array [
          "hello",
        ],
      },
      "manifestPath": "invalid/missing-field-of-peer/bar/package.json",
      "reason": "Missing \\"require-external-programs\\" in \\"peerDependencies\\"",
    },
    "invalid/not-an-array/baz/package.json" => Object {
      "manifestContent": Object {
        "name": "bar",
        "peerDependencies": Object {
          "require-external-programs": "*",
        },
        "requireExternalPrograms": "hello",
      },
      "manifestPath": "invalid/not-an-array/baz/package.json",
      "reason": "Expecting \\"require-external-programs\\" to be an array but received \\"hello\\"",
    },
  },
}
`;

exports[`require-external-programs-lib fromAllManifests throws error when received invalid data which lacks "peerDependencies" 1`] = `
Object {
  "error": [InvalidManifest: Detected 1 invalid items],
  "map": Map {
    "invalid/missing-field-of-peer/bar/package.json" => Object {
      "manifestContent": Object {
        "name": "bar",
        "requireExternalPrograms": Array [
          "hello",
        ],
      },
      "manifestPath": "invalid/missing-field-of-peer/bar/package.json",
      "reason": "Missing \\"require-external-programs\\" in \\"peerDependencies\\"",
    },
  },
}
`;

exports[`require-external-programs-lib fromAllManifests throws error when received invalid data whose "peerDependencies" lacks "require-external-programs" 1`] = `
Object {
  "error": [InvalidManifest: Detected 1 invalid items],
  "map": Map {
    "invalid/missing-dependency-in-peer/foo/package.json" => Object {
      "manifestContent": Object {
        "name": "foo",
        "peerDependencies": Object {},
        "requireExternalPrograms": Array [
          "hello",
        ],
      },
      "manifestPath": "invalid/missing-dependency-in-peer/foo/package.json",
      "reason": "Missing \\"require-external-programs\\" in \\"peerDependencies\\"",
    },
  },
}
`;

exports[`require-external-programs-lib fromAllManifests throws error when received invalid data whose "requireExternalPrograms" is not an array 1`] = `
Object {
  "error": [InvalidManifest: Detected 1 invalid items],
  "map": Map {
    "invalid/not-an-array/baz/package.json" => Object {
      "manifestContent": Object {
        "name": "bar",
        "peerDependencies": Object {
          "require-external-programs": "*",
        },
        "requireExternalPrograms": "hello",
      },
      "manifestPath": "invalid/not-an-array/baz/package.json",
      "reason": "Expecting \\"require-external-programs\\" to be an array but received \\"hello\\"",
    },
  },
}
`;

exports[`require-external-programs-lib fromAllManifests works with valid data 1`] = `
Map {
  "valid/node_modules/abc-def/package.json" => "def",
  "valid/node_modules/abc-ghi/package.json" => "ghi",
  "valid/node_modules/jkl/package.json" => "jkl",
}
`;

exports[`require-external-programs-utils examine when all is not satisfied 1`] = `
Object {
  "error": false,
  "response": "
[2m* [22m[1mabc[22m
[2m  - [22m[2m[3mrequired by [23m[22m[3mvalid/node_modules/abc-def/package.json[23m
[2m  - [22m[2m[3mrequired by [23m[22m[3mvalid/node_modules/abc-ghi/package.json[23m

[2m* [22m[1mdef[22m
[2m  - [22m[2m[3mrequired by [23m[22m[3mvalid/node_modules/abc-def/package.json[23m

[2m* [22m[1mghi[22m
[2m  - [22m[2m[3mrequired by [23m[22m[3mvalid/node_modules/abc-ghi/package.json[23m

[2m* [22m[1mjkl[22m
[2m  - [22m[2m[3mrequired by [23m[22m[3mvalid/node_modules/jkl/package.json[23m

",
  "satisfied": false,
}
`;

exports[`require-external-programs-utils examine when all is not satisfied 2`] = `
Set {
  Array [
    "abc",
    Object {
      "nothrow": true,
    },
  ],
  Array [
    "def",
    Object {
      "nothrow": true,
    },
  ],
  Array [
    "ghi",
    Object {
      "nothrow": true,
    },
  ],
  Array [
    "jkl",
    Object {
      "nothrow": true,
    },
  ],
}
`;

exports[`require-external-programs-utils examine when all is satisfied 1`] = `
Set {
  Array [
    "abc",
    Object {
      "nothrow": true,
    },
  ],
  Array [
    "def",
    Object {
      "nothrow": true,
    },
  ],
  Array [
    "ghi",
    Object {
      "nothrow": true,
    },
  ],
  Array [
    "jkl",
    Object {
      "nothrow": true,
    },
  ],
}
`;

exports[`require-external-programs-utils examine when only some is satisfied 1`] = `
Object {
  "error": false,
  "response": "
[2m* [22m[1mghi[22m
[2m  - [22m[2m[3mrequired by [23m[22m[3mvalid/node_modules/abc-ghi/package.json[23m

[2m* [22m[1mjkl[22m
[2m  - [22m[2m[3mrequired by [23m[22m[3mvalid/node_modules/jkl/package.json[23m

",
  "satisfied": false,
}
`;

exports[`require-external-programs-utils examine when only some is satisfied 2`] = `
Set {
  Array [
    "abc",
    Object {
      "nothrow": true,
    },
  ],
  Array [
    "def",
    Object {
      "nothrow": true,
    },
  ],
  Array [
    "ghi",
    Object {
      "nothrow": true,
    },
  ],
  Array [
    "jkl",
    Object {
      "nothrow": true,
    },
  ],
}
`;

exports[`require-external-programs-utils examine when some manifest files are invalid 1`] = `
Object {
  "error": true,
  "response": "
[[1mInvalidManifest:[22m Detected 3 invalid items]
  * Missing \\"require-external-programs\\" in \\"peerDependencies\\" [2m(invalid/missing-dependency-in-peer/foo/package.json)[22m
  * Missing \\"require-external-programs\\" in \\"peerDependencies\\" [2m(invalid/missing-field-of-peer/bar/package.json)[22m
  * Expecting \\"require-external-programs\\" to be an array but received \\"hello\\" [2m(invalid/not-an-array/baz/package.json)[22m
",
  "satisfied": false,
}
`;

exports[`require-external-programs-utils group by manifests 1`] = `
Map {
  "foo/package.json" => Set {
    "abc",
    "def",
    "ghi",
  },
  "bar/package.json" => Set {
    "abc",
    "jkl",
  },
  "baz/package.json" => Set {
    "mno",
  },
}
`;

exports[`require-external-programs-utils group by program 1`] = `
Map {
  "abc" => Set {
    "foo/package.json",
    "bar/package.json",
  },
  "def" => Set {
    "foo/package.json",
  },
  "ghi" => Set {
    "foo/package.json",
  },
  "jkl" => Set {
    "bar/package.json",
  },
  "mno" => Set {
    "baz/package.json",
  },
}
`;

exports[`require-external-programs-utils messageFromError when error is an instance of Error 1`] = `[Error: Hello, World!!]`;

exports[`require-external-programs-utils messageFromError when error is an instance of InvalidManifest 1`] = `
"
[[1mInvalidManifest:[22m Detected 3 invalid items]
  * Missing \\"require-external-programs\\" in \\"peerDependencies\\" [2m(invalid/missing-dependency-in-peer/foo/package.json)[22m
  * Missing \\"require-external-programs\\" in \\"peerDependencies\\" [2m(invalid/missing-field-of-peer/bar/package.json)[22m
  * Expecting \\"require-external-programs\\" to be an array but received \\"hello\\" [2m(invalid/not-an-array/baz/package.json)[22m
"
`;
